# kcs

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.mcp  Makefile  README.md  docker-compose.yml  pyproject.toml  validation_results.json
.claude/commands/: plan.md  specify.md  tasks.md
.github/workflows/: ci.yml  kcs-impact-analysis.yml
.specify/memory/: constitution.md  constitution_update_checklist.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
config/: README.md  semantic_search.yaml.example
config/examples/: development.json  high-performance.toml  production.yaml
docs/: DATABASE_SETUP.md  INSTALLATION.md  README.md  async_optimization.md  benchmarking.md  cli.md  deployment.md  troubleshooting.md
docs/api/: api-overview.md  authentication.md  endpoints.md  error-handling.md  examples.md  integration.md  schemas.md
docs/features/: kernel_patterns.md
docs/vectorstore/: ENVIRONMENT.md  README.md  api.html  columns.md  constraint-validation.md  discrepancies.md  embedding-mapping.md  errors.md  examples.md  field-mapping.md  methods.md  migration.md  openapi-validation.md  performance.md  progress-report.md  setup.md  similarity-search-test.md  summary.md  validation-report.md
scripts/: direct_performance_benchmark.py  index_all.sh  migrate_semantic_search.sh  quick_index_and_benchmark.py  run_benchmark_only.py  semantic_search_benchmark.py  validate_semantic_search.py
scripts/linting/: check-call-graph.sh
specs/001-kernel-context-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-1-call-graph/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-implement-mcp-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-current-code-has/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-infrastructure-empty-stub/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-multi-file-json/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-call-graph-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-semantic-search-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-verify-document-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/rust/: Cargo.toml
src/rust/kcs-config/: Cargo.toml
src/rust/kcs-config/src/: lib.rs  main.rs  parser.rs
src/rust/kcs-config/tests/: integration_test.rs
src/rust/kcs-drift/: Cargo.toml
src/rust/kcs-drift/resources/: report_style.css
src/rust/kcs-drift/src/: drift_detector.rs  lib.rs  report_generator.rs  spec_parser.rs
src/rust/kcs-drift/tests/: integration_test_spec_validation.rs
src/rust/kcs-extractor/: Cargo.toml
src/rust/kcs-extractor/src/: entry_points.rs  entrypoints.rs  ioctls.rs  lib.rs  main.rs  syscalls.rs
src/rust/kcs-graph/: .clippy.toml  .rustfmt.toml  Cargo.toml
src/rust/kcs-graph/benches/: traversal.rs
src/rust/kcs-graph/src/: builder.rs  call_edge.rs  call_path.rs  call_site.rs  config.rs  cycles.rs  function_pointer.rs  lib.rs  macro_call.rs  main.rs  queries.rs  traversal.rs  types.rs
src/rust/kcs-graph/tests/: test_call_graph_perf.rs  test_function_pointers.rs  test_simple_calls.rs
src/rust/kcs-impact/: Cargo.toml
src/rust/kcs-impact/src/: analyzer.rs  diff_analyzer.rs  lib.rs  main.rs  patch_parser.rs
src/rust/kcs-parser/: .clippy.toml  .rustfmt.toml  Cargo.toml
src/rust/kcs-parser/benches/: call_graph_bench.rs  parser_benchmarks.rs  run_benchmarks.sh
src/rust/kcs-parser/queries/: call_patterns.scm
src/rust/kcs-parser/src/: ast.rs  ast_traversal.rs  call_classifier.rs  call_extractor.rs  clang_bridge.rs  config.rs  error_handling.rs  kernel_patterns.rs  lib.rs  main.rs  parallel_processing.rs  tree_sitter_parser.rs  types.rs
src/rust/kcs-parser/src/call_extraction/: callbacks.rs  conditional.rs  direct_calls.rs  macro_calls.rs  mod.rs  pointer_calls.rs
src/rust/kcs-parser/tests/: test_parser_api_contract.rs
src/rust/kcs-python-bridge/: Cargo.toml
src/rust/kcs-python-bridge/src/: lib.rs
src/rust/kcs-search/: Cargo.toml
src/rust/kcs-search/src/: embeddings.rs  lib.rs  main.rs  query.rs  vector_db.rs
src/rust/kcs-search/tests/: integration.rs  semantic_search.rs
src/rust/kcs-serializer/: Cargo.toml
src/rust/kcs-serializer/src/: checksum.rs  checksum_test.rs  chunk_writer.rs  chunk_writer_test.rs  chunker.rs  graphml_export.rs  json_export.rs  lib.rs  main.rs  manifest.rs  manifest_test.rs
src/rust/kcs-serializer/tests/: cli_tests.rs  error_handling_tests.rs  integration_tests.rs  performance_tests.rs
tests/: conftest.py
tests/compliance/: test_constitutional_compliance.py
tests/contract/: test_call_graph_extraction.py  test_call_path_tracing.py  test_call_relationships.py  test_chunk_batch.py  test_chunk_manifest.py  test_chunk_process.py  test_chunk_status.py  test_detect_patterns.py  test_enhance_symbols.py  test_export_graph.py  test_extract_entry_points.py  test_extract_entrypoints.py  test_function_pointers.py  test_get_symbol.py  test_impact_of.py  test_index_content_tool.py  test_index_status_tool.py  test_mcp_entrypoint_flow.py  test_mcp_entrypoint_flow_implementation.py  test_mcp_impact_of.py  test_mcp_impact_of_implementation.py  test_mcp_list_dependencies.py  test_mcp_list_dependencies_implementation.py  test_mcp_who_calls_enhanced.py  test_mcp_who_calls_implementation.py  test_parse_kernel_config.py  test_root_endpoint.py  test_search_code.py  test_semantic_search.py  test_semantic_search_tool.py  test_traverse_call_graph.py  test_who_calls.py  (+1 more)
tools/: README.md  extract_entry_points_streaming.py  extract_entrypoints_streaming.py  extract_syscalls_fast.sh  gen_token.sh  generate_docs.py  index_kernel.sh  performance_optimization.py  process_chunks.py  quick-setup.sh  run_system_test.py
(+191 files in other folders)
