[workspace]
resolver = "2"
members = [
    "src/rust/kcs-parser",
    "src/rust/kcs-extractor",
    "src/rust/kcs-graph",
    "src/rust/kcs-impact",
    "src/rust/kcs-drift",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["KCS Team <team@kcs.dev>"]
license = "Apache-2.0"
repository = "https://github.com/your-org/kcs"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.20"
tree-sitter-c = "0.20"
clang-sys = "1.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }
aya = "0.12"
libbpf-rs = "0.23"

[workspace.metadata.docs.rs]
all-features = true

[workspace.lints]
clippy.cognitive_complexity = "warn"
clippy.too_many_arguments = "warn"
clippy.too_many_lines = "warn"
clippy.large_enum_variant = "warn"
clippy.struct_excessive_bools = "warn"
clippy.inefficient_to_string = "deny"
clippy.string_add = "deny"
clippy.string_add_assign = "deny"
clippy.unwrap_used = "deny"
clippy.expect_used = "deny"
clippy.panic = "deny"
clippy.indexing_slicing = "warn"
clippy.float_cmp = "deny"
clippy.mem_forget = "deny"
clippy.missing_errors_doc = "warn"
clippy.missing_panics_doc = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
