[workspace]
resolver = "2"
members = [
    "kcs-parser",
    "kcs-extractor",
    "kcs-graph",
    "kcs-impact",
    "kcs-drift",
    "kcs-config",
    "kcs-python-bridge"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tree-sitter = "0.20"
tree-sitter-c = "0.20"
clap = { version = "4.0", features = ["derive"] }
clang-sys = { version = "1.6", features = ["clang_6_0"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KCS Team"]
license = "MIT"
repository = "https://github.com/kcs/kernel-context-server"
