[package]
name = "kcs-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kcs-config"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex = "1.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
