[package]
name = "kcs-drift"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kernel specification drift detection"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
kcs-graph = { path = "../kcs-graph" }
regex = "1.0"
yaml-rust = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
