[package]
name = "kcs-extractor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kernel entry point detection and extraction"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
regex = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.0"
