[package]
name = "kcs-python-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "kcs_python_bridge"
crate-type = ["cdylib"]

[dependencies]
kcs-parser = { path = "../kcs-parser" }
kcs-extractor = { path = "../kcs-extractor" }
pyo3 = { version = "0.21", features = ["extension-module"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true
