[package]
name = "kcs-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kcs-search"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

# Semantic search specific dependencies
# Note: Using simpler embedding approach to avoid complex ML dependencies
# Full implementation would use fastembed or similar
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
pgvector = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
